[package]
name = "mobius_phase_retrieval_sdk"
version = "0.4.2"
edition = "2021"
description = "Standalone public application-layer SDK for Möbius Phase Retrieval"
license = "MIT"
repository = "https://github.com/ixu2486/mobius_phase_retrieval"
readme = "README.md"

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
